--- a/resources/assets/client/scss/_libraries.scss
+++ b/resources/assets/client/scss/_libraries.scss
@@ -1,2 +1,2 @@
-@import 'node_modules/swiper/swiper.min.css';
-@import "@fancyapps/ui/dist/fancybox/fancybox.css";
+@import '../../../../node_modules/swiper/swiper.min.css';
+@import "../../../../node_modules/@fancyapps/ui/dist/fancybox/fancybox.css";
