--- a/resources/assets/client/scss/_main.scss
+++ b/resources/assets/client/scss/_main.scss
@@ -709,7 +709,7 @@ body, h1, h2, h3, h4, h5, p, ul, li {
                 border: 1px solid #F14C90;
                 border-radius: 50px;
                 padding: 5px 20px;
-                transition: all ease 0.3s;
+                transition: all ease 0.3s;                
 
                 &:hover {
                     background-color: #F14C90;
@@ -3240,6 +3240,7 @@ body, h1, h2, h3, h4, h5, p, ul, li {
 .header {
     background-color: #000;
     padding-left: 3vw;
+    padding-right: 1rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -3365,16 +3366,21 @@ body, h1, h2, h3, h4, h5, p, ul, li {
         &__buttom {
 
             &__cta {
-                color: #FFF;
+                color: #C0BDAD;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 10px;
                 font-family: "Red Hat Display", serif;
-                font-size: 1.125rem;
+                font-size: 0.938rem;
                 font-style: normal;
                 font-weight: 600; 
                 text-decoration: inherit;
-                background-color: #F14C90;
-                border: 1px solid #F14C90;
-                padding: 0.3rem 3rem 0.3rem 2rem;
-                border-radius: 17px 0 0 17px;
+                background: linear-gradient(180deg, #000000 0%, #390B0F 86.54%);
+                border: 1px solid #A20712;
+                height: 32px;
+                width: 169px;
+                border-radius: 10px;
                 transition: all ease 0.3s;
 
                 &:hover {
